2008-02-11  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: Improve argument checking to match docs.

2008-02-08  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: UnixSignal.WaitAny() should have the same return type as
	  WaitHandle.WaitAny().  Oops.

2008-02-08  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: Modification of Info->count should be thread safe.

2008-01-28  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: Added; Polling and blocking based Unix signal mechanism.
	  http://lists.ximian.com/pipermail/mono-devel-list/2008-January/026501.html

2008-01-22  Sebastien Pouliot  <sebastien@ximian.com>

	* UnixPipes.cs: Fix Equals to avoid NRE (and return false if object 
	is null). Found using Gendarme.

2007-12-17  Jonathan Pryor  <jpryor@novell.com>

	* UnixEnvironment.cs: Update MachineName property accesor to use uname(2)
	  instead of gethostname(2), as gethostname(2) truncates the machine name to
	  16 characters, while uname(2) doesn't.

2007-12-17  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixDirectoryInfo.cs: Fix Parent property so that it properly handles
	  returning the parent of "/".  UnixPath.GetDirectoryName() returns "" on
	  "error", not null; act accordingly.
	* UnixDriveInfo.cs: Fix IsReady property so that it returns `false' if no
	  media is mounted.  The presence of media is determined by comparing the
	  Statvfs.f_fsid value of the current and parent directories; if they
	  differ, it is assumed that media is present, and thus the directory is
	  ready.  If they're identical, then media isn't present, and the directory
	  isn't ready.
	* UnixPath.cs: UnixPath.GetDirectoryName("/mnt") should return "/", not "".

2007-09-13  Jonathan Pryor  <jonpryor@vt.edu>

	* UnixStream.cs: Don't read/write if the buffer has no data.  Fixes #82836.

2006-10-24  Jonathan Pryor  <jonpryor@vt.edu>

	* MapAttribute.cs: Moved to ../Mono.Unix.Native/MapAttribute.cs.

2006-08-21  Jonathan Pryor  <jonpryor@vt.edu>
